# tarot

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml
backend/: pyproject.toml
backend/tarot/: auth.py  cards.py  crypto.py  db.py  decks.py  dedupe.py  importer.py  interpret.py  spreads.py  users.py
backend/tarot/api/: app.py
backend/tarot/data/: meanings.json  pkt.json  spreads_tarotschema.json
backend/tarot/downloader/: adapters.py  cli.py
backend/tarot/slicer/: __init__.py  cli.py  core.py
decks/marseille-dodal/: manifest.yaml
decks/rider-waite-smith/: manifest.yaml
docs/: decks.md
docs/handoffs/: solarpunk-tarot.md
frontend/: README.md  package-lock.json  vite.config.ts
frontend/src/: app.css  app.html  service-worker.ts
frontend/src/lib/: Card.svelte  CardDetail.svelte  VisibilitySelect.svelte  api.ts  prefs.svelte.ts  reading.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/decks/: +page.svelte
frontend/src/routes/decks/[slug]/: +page.svelte
frontend/src/routes/journal/: +page.svelte
frontend/src/routes/journal/[id]/: +page.svelte
frontend/src/routes/reading/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/static/: manifest.webmanifest
tools/: import_tarotschema.py  slice_grid.py
