[project]
name = "tarot"
version = "0.1.0"
description = "Tarotarium: self-hosted tarot — multi-deck reader, journal, and deck downloader"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pillow>=10.0",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tarot-dl = "tarot.downloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tarot"]
